# ibd_crew

./: .env.example  .gitignore  Agent02Analyst.md  Agent03RotationDetector.md  Agent04SectorStrategist.md  Agent05PortfolioManager.md  Agent06RiskOfficer.md  Agent07PortfolioReconciler.md  Agent08Educator.md  AgentReturnProjector.md  CLAUDE.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  EarningAnalystAgent.md  ExitStrategistAgent.md  PortfolioPatternRecognitionAgent.md  README.md  RegimeDetectorAgent.md  TargetPortfolioConstructorAgent.md  pyproject.toml  requirements.txt  run_pipeline.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
golden_datasets/: analyst_golden.json  earnings_risk_golden.json  educator_golden.json  exit_strategy_golden.json  portfolio_golden.json  reconciler_golden.json  regime_detector_golden.json  research_golden.json  returns_projection_golden.json  risk_golden.json  rotation_golden.json  strategy_golden.json  synthesis_golden.json  target_return_golden.json
src/ibd_agents/: exceptions.py
tests/fixtures/: conftest.py
tests/unit/: conftest.py  test_analyst_agent.py  test_analyst_schema.py  test_candidate_ranker.py  test_cap_classifier.py  test_catalyst_enrichment.py  test_dynamic_sizing.py  test_earnings_risk_agent.py  test_earnings_risk_schema.py  test_educator_agent.py  test_educator_schema.py  test_exit_strategist_agent.py  test_exit_strategy_schema.py  test_historical_agent.py  test_historical_schema.py  test_historical_store.py  test_monte_carlo.py  (+32 more)
(+87 files in other folders)
